<resources>
    <string name="app_name">Language App</string>
    <string name="no_connection_text">No \nInternet connection</string>
    <string name="check_again_text">Check again</string>

    <string name="title_first_onboard">Confidence in your words</string>
    <string name="text_first_onboard">With conversation-based learning, you will be talking from lesson one</string>
    <string name="title_second_onboard">Take your time to learn</string>
    <string name="text_second_onboard">Develop a habit of learning and make it a part of your daily routine</string>
    <string name="title_third_onboard">The lessons you need to learn</string>
    <string name="text_third_onboard">Using a variety of learning styles to learn and retain</string>
    <string name="text_skip_onboard">Skip onboarding</string>
    <string name="text_next_onboard">Next</string>
    <string name="text_more_onboard">More</string>
    <string name="text_choose_onboard">Choose a language</string>

    <string name="title_actionbar_lang">Language select</string>
    <string name="title_choose_language">What is your native language?</string>
    <string name="title_choose_btn">Choose</string>

    <string name="russian_lang">Russian</string>
    <string name="english_lang">English</string>
    <string name="chinese_lang">Chinese</string>
    <string name="belarus_lang">Belarus</string>
    <string name="kazakh_lang">Kazakh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>